# RobotDreams

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  RobotDreams  plan.md  project.json
.github/workflows/: ci.yml  docker-e2e.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: calibration.rs  lib.rs  project.rs  scene_graph.rs  scene_harness.rs  scene_physics.rs  scene_physics_contract.rs  scene_physics_pge.rs  scene_physics_shadow.rs
core/src/physics/: mod.rs
core/tests/: physics_backend_boundary.rs  production_pge_attachment_lifecycle.rs
crates/feetech-servo/: Cargo.toml
crates/feetech-servo/src/: lib.rs
crates/feetech-servo/src/servo/: tests.rs
crates/feetech-servo/src/servo/protocol/: group_sync_read.rs  group_sync_write.rs  mod.rs  port_handler.rs  protocol_packet_handler.rs  serial_port.rs  stservo_def.rs  virtual_uart.rs
crates/feetech-servo/src/servo/sim/: mod.rs
crates/feetech-servo/tests/: python_sdk_compat.py  python_sdk_compat.rs
daemon/: Cargo.toml
daemon/src/: app_controller.rs  hardware_runtime.rs  main.rs  projects_controller.rs  robot_scene_component.rs  scene_transform.rs  system_metrics.rs  virtual_bus.rs
daemon/src/scenario/: ast.rs  examples.rs  mod.rs  runtime.rs  tests.rs  world.rs
daemon/wui/: app_controller.wui  projects_controller.wui  robotdreams.css
docker/: python_sdk_test.Dockerfile  test_scservo_sdk_e2e.py
examples/: README.md  trashbin.gltf
examples/assets/: README.md
examples/assets/robots/puppybot/: README.md  robotdreams.json
examples/puppyarm/: README.md  project.json  robotdreams.example.json
examples/puppyarm/model/: robotdreams.json
examples/puppyarm/model/final/launch/: final.launch
examples/puppyarm/model/final/meshes/: GE_27.gltf  MOTOR_1723_3.gltf  PCB_CHAZUO_92.gltf  Part_1.gltf  Part_1_1.gltf  Part_1_2.gltf  Part_1_3.gltf  Part_1_4.gltf  Part_1_5.gltf  Part_1_6.gltf  Part_1_7.gltf  Part_1_8.gltf  Part_2.gltf  SG_ZIJI_15.gltf  XG_ZIJI_16.gltf  ZK_122.gltf  _________v2.gltf  _________v2_1.gltf
examples/puppyarm/model/final/urdf/: final.urdf
examples/scenes/: README.md
examples/scenes/puppybot-bin-ball/: README.md  project.json
puppyarm/: Cargo.toml  README.md
puppyarm/model/: PuppyArm.urdf  robot.urdf
puppyarm/model/meshes/: GE_27_1.stl  Part_1_1_3.stl  Part_1_2_3.stl  Part_2_2.stl  SG_ZIJI_15_1.stl  ZK_122_1.stl
puppyarm/src/: main.rs
recorder/: Cargo.toml
recorder/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
robot_utils/: Cargo.toml
robot_utils/src/: lib.rs
robot_utils/src/servo/: sts.rs  tests.rs
robot_utils/src/servo/protocol/: feetech_scs.rs  stservo_def.rs  virtual_uart.rs
robot_utils/src/servo/sim/: mod.rs
src/: app_controller.rs  lib.rs  main.rs  projects_controller.rs  robot_dreams.rs  urdf_view_controller.rs
src/ik/: mod.rs
src/physics/: mod.rs
src/servo/: mod.rs  scscl.rs  sts.rs  tests.rs
src/servo/protocol/: feetech_scs.rs  group_sync_read.rs  group_sync_write.rs  mod.rs  port_handler.rs  protocol_packet_handler.rs  serial_bus.rs  virtual_uart.rs
src/servo/sim/: mod.rs
src/urdf/: mod.rs
wgui-controllers/dashboard-preview/: controller.js
wgui-controllers/robot-scene/: controller.js
wgui-controllers/workbench-refresh/: controller.js
wui/: app_controller.wui  projects_controller.wui  robotdreams.css  urdf_view_controller.wui  viewport_controller.wui
