[package]
name = "RobotDreams"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "robot_utils", "puppyarm"]

[workspace.dependencies]
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "0393a2162f41be130a7d0ce5efc73a12b78a7b9a" }

[[bin]]
name = "robot_dreams"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
log = "0.4"
rapier3d = { version = "0.23", default-features = false, features = ["dim3", "f32"] }
robot_utils = { path = "robot_utils" }
roxmltree = "0.20"
serialport = "4"
simple_logger = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
urdf-rs = "0.7"
wgui = { workspace = true }
