[workspace]
members = [
    "core",
    "renderer",
    "recorder",
    "daemon",
    "cli",
    "crates/feetech-servo",
]
default-members = ["cli"]
resolver = "3"

[workspace.dependencies]
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "c9a30a931385fd8a51a3ec782841934a26bfa51c" }

[patch."https://github.com/puppycorp/pge.git"]
pge-app = { path = "../pge/pge-app" }
pge-core = { path = "../pge/pge-core" }
pge-physics = { path = "../pge/pge-physics" }
pge-renderer = { path = "../pge/pge-renderer" }
pge-wgpu-renderer = { path = "../pge/pge-wgpu-renderer" }
