[package]
name = "robotdreams"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "robotdreams"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
robotdreams-core = { path = "../core" }
robotdreams-recorder = { path = "../recorder" }
robotdreams-renderer = { path = "../renderer" }
pge-core = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
pge-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
pge-wgpu-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
