[package]
name = "robotdreams-core"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
feetech-servo = { path = "../crates/feetech-servo" }
gltf = "1"
pge-core = { git = "https://github.com/puppycorp/pge.git", rev = "b332faf79fcc75c5ae4a9673512065c222fc4700" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
urdf-rs = "0.7"
rapier3d = { version = "0.23", default-features = false, features = ["dim3", "f32"] }
