[package]
name = "robotdreams-core"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
feetech-servo = { path = "../crates/feetech-servo" }
gltf = "1"
pge-core = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
pge-physics = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
pge-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
pge-wgpu-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
urdf-rs = "0.7"

[dev-dependencies]
pge-collision = { git = "https://github.com/puppycorp/pge.git", rev = "b4c9863" }
rapier3d = { version = "0.23", default-features = false, features = ["dim3", "f32"] }
