[package]
name = "robotdreams-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "robotdreams-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
log = "0.4"
rapier3d = { version = "0.23", default-features = false, features = ["dim3", "f32"] }
feetech-servo = { path = "../crates/feetech-servo" }
robotdreams-core = { path = "../core" }
robotdreams-renderer = { path = "../renderer" }
roxmltree = "0.20"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
urdf-rs = "0.7"
wgui = { workspace = true }
pge-core = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-app = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-wgpu-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
