[package]
name = "puppyarm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4"
robot_utils = { path = "../robot_utils" }
serialport = "4"
simple_logger = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "ff79ee750803f78efe9b1922482563b76103a0a5" }
