[package]
name = "robotdreams-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
gltf = { version = "1", features = ["extensions", "KHR_lights_punctual", "KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_specular", "KHR_materials_transmission", "KHR_materials_unlit", "KHR_materials_volume", "KHR_texture_transform"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }
png = "0.17"
rayon = "1"
robotdreams-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
